[package]
name = "cache"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru         = "0.6.6"
anyhow      = "1.0.43"
async-trait = "0.1.51"
tokio       = "1.10.0"
tracing     = "0.1.26"

[dev-dependencies]
tokio       = { version = "1.10.0", features = ["macros"] }
