[package]
name = "communication_utils"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
kafka = ["rdkafka", "tracing_utils/with_kafka"]
amqp = ["tokio-amqp", "lapin"]
grpc = ["tonic", "tracing_utils/with_grpc"]
http = ["reqwest", "tracing_utils/with_http"]

[dependencies]
# Workspace
rpc         = { path    = "../../rpc" }
misc_utils  = { path    = "../misc" }
task_utils  = { path    = "../task" }
tracing_utils           = { path           = "../tracing" }

# Crates.io
anyhow      = "1.0.43"
async-trait = "0.1.51"
thiserror   = "1.0.26"
lapin       = { version = "1.7.1", optional = true }
rdkafka     = { version = "0.26.0", features = ["cmake-build"], optional = true }
reqwest     = { version = "0.11.4", features = ["json"], optional = true }
tokio       = { version = "1.10.0", features = ["rt-multi-thread"] }
tokio-amqp  = { version = "1.0.0", optional = true }
tonic       = { version = "0.5.2", optional = true }
tracing     = "0.1.26"
url         = { version = "2.2.2", features = ["serde"] }
futures-util            = "0.3.16"
tracing-futures         = "0.2.5"
