[package]
name = "metrics_utils"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
settings_utils = { path = "../settings" }

# Crates.io
metrics     = { version = "0.17.0", features = ["std"] }
tracing     = "0.1.26"
metrics-exporter-prometheus         = "0.6.0"
