[package]
name = "misc_utils"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crates.io
itertools   = "0.10.1"
serde       = "1.0.127"
serde_json  = "1.0.66"
tracing     = "0.1.26"

[dev-dependencies]
test-case   = "1.2.0"
