[package]
name = "notification_utils"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdl_dto     = { path = "../../dto" }
communication_utils      = { path = "../communication" }

anyhow      = "1.0.43"
tracing     = "0.1.26"
serde       = { version = "1.0.127", features = ["derive"] }
async-trait = "0.1.51"
serde_json  = "1.0.66"
