[package]
name = "rpc_dto_utils"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2      = "1.0.28"
quote            = "1.0.9"
syn              = { version = "1.0.74", features = ["full", "extra-traits"] }
