[package]
name = "settings_utils"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[dependencies]
# crates.io
anyhow      = "1.0.44"
config      = "0.11.0"
dirs        = "4.0.0"
url         = { version = "2.2.2", features = ["serde"] }
derive_more = { version = "0.99.16", features = ["display"] }
lapin       = "1.8.0"
serde       = { version = "1.0.130", features = ["derive"] }

# Workspace
###
# add your own dependencies if the thing you want to include requires it
###
