[package]
name = "tracing_utils"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with_grpc = ["tonic", "with_tower"]
with_kafka = ["rdkafka"]
with_http = ["warp", "reqwest", "with_tower", "hyper"]
with_graphql = ["async-graphql"]
with_tower = ["tower",
            "http",
            "tower-http",
            "opentelemetry-http",
            "tower-service",
            "http-body"]

[dependencies]
anyhow      = "1.0.43"
http        = { version = "0.2.4", optional = true }
http-body   = { version = "0.4.3", optional = true }
hyper       = { version = "0.14.11", optional = true }
rdkafka     = { version = "0.26.0", features = ["cmake-build"], optional = true }
reqwest     = { version = "0.11.4", features = ["json"], optional = true }
tokio       = { version = "1.10.0", features = ["rt-multi-thread"] }
tower       = { version = "0.4.8", optional = true }
tower-http  = { version = "0.1.1", optional = true, features = ["trace"] }
tracing     = "0.1.26"
warp        = { version = "0.3.1", optional = true }
async-graphql           = { version = "2.9.10", features = ["uuid", "opentelemetry", "tracing"], optional = true }
futures-util            = "0.3.16"
opentelemetry           = { version = "0.16.0", features = ["rt-tokio"] }
opentelemetry-http      = { version = "0.5.0", optional = true }
opentelemetry-jaeger    = { version = "0.15.0", features = ["rt-tokio"] }
tonic                   = { version = "0.5.2", optional = true }
tower-service           = { version = "0.3.1", optional = true }
tracing-futures         = "0.2.5"
tracing-opentelemetry   = "0.15.0"
tracing-subscriber      = "0.2.20"
